# gen-weeks

./: Cargo.toml  README.md
src/: main.rs
src/config/: app.rs  mod.rs  model.rs
src/tools/: color.rs  logo.rs  mod.rs
