[package]
name = "label-builder"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ReneKrewinkel/label-builder"
homepage = "https://krewinkel.studio"
description = "GitHub Week Labeler"
authors = ["René Krewinkel - rene@krewinkel.nl"]

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
text-to-ascii-art = "0.1.5"
tracing = "0.1.41"
anyhow = "1.0.98"